# game-recommender

./: .gitignore  README.md  docker-compose.yml  games.json  package.json
client/: package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  types.ts
docker/docs/: Dockerfile
docker/server/: Dockerfile  entrypoint.sh
documentation/: mkdocs.yml
documentation/docs/: endpoints.md  index.md  models.md  rawg-api.md  (+1 more)
game-data-scrapper/: genres.json  get_games.py
server/: pyproject.toml
server/api/: settings.py  test.py  urls.py  views.py
server/api/auth/: serialiser.py  test.py  urls.py  views.py
server/api/game/: admin.py  models.py  rec_model.py  serialiser.py  urls.py  views.py
server/api/game/fixtures/: games.json  platforms.json
server/api/game/management/commands/: preload_data.py
server/api/game/migrations/: 0001_initial.py  0002_alter_genre_name_alter_platform_name.py
server/api/game/test/: test_authenticated_requests.py  test_recommend.py  test_unauthenticated_requests.py
server/api/rating/: admin.py  models.py  serialiser.py  urls.py  views.py
server/api/rating/migrations/: 0001_initial.py  0002_rename_game_id_rating_game_and_more.py  0003_alter_rating_rating.py  0004_alter_rating_id.py
server/api/rating/test/: test_authenticated_requests.py  test_unauthenticated_requests.py
server/api/user/: serializer.py  urls.py  views.py
server/fixture_data/fixtures/: games.json  genres.json  ratings.json  users.json
server/fixture_data/management/commands/: preload_data.py
src/: App.tsx  index.css  types.ts
(+35 files in other folders)
